--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -119,13 +119,13 @@ const schema = {
   </section>
 
   <!-- Certificate Modal -->
-  <div id="certificateModal" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50">
-    <div class="bg-white p-4 rounded-lg max-w-4xl w-full  mx-4 flex flex-col place-items-center">
+  <div id="certificateModal" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-[1000]">
+    <div class="bg-white p-4 rounded-lg max-w-4xl w-full mx-4 flex flex-col items-center overflow-auto max-h-screen relative">
       <div class="flex justify-between items-center mb-4 w-full">
         <h3 class="text-xl font-bold" id="modalTitle"></h3>
-        <button id="closeModalBtn" class="text-2xl font-bold px-4 py-2">&times;</button>
+        <button id="closeModalBtn" class="text-2xl font-bold px-4 py-2 absolute top-4 right-4">&times;</button>
       </div>
-      <img id="certificateImage" src="" alt="Certificate" class="h-[600px]" />
+      <img id="certificateImage" src="" alt="Certificate" class="w-full h-auto max-h-[80vh] object-contain" />
     </div>
   </div>
 
